--- a/librairies/chouquette.css
+++ b/librairies/chouquette.css
@@ -15,6 +15,7 @@ fieldset{border-style:none;}
 html 
 {
 	height: 100%;
+	font-family: Arial, Helvetica, sans-serif;
 }
 
 body
@@ -23,15 +24,25 @@ body
 	position:relative;
 }
 
+h1 {
+    color: 	rgb(206, 129, 48);
+}
+
 header
 {
 
 }
 
-footer
-{
-	
+body > footer {
+    background-color: rgb(45, 45, 45);
+    color: white;
+    text-align: center;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
 }
+
 h2
 {
 	font-size:2.5em;
