Changes to be committed: 	modified:   librairies/chouquette.css 	modified:   vue/vueAcceuil.php
Untracked files:
	librairies/img/1.jpg
	librairies/img/2.jpg
	librairies/img/3.jpg
	librairies/img/4.jpg
	librairies/img/5.jpg
	librairies/img/6.gif
	librairies/img/7.gif
	librairies/img/8.gif

--- a/librairies/chouquette.css
+++ b/librairies/chouquette.css
@@ -171,6 +171,6 @@ padding-right: 1.1rem;
 .imageRogner
 {
 	overflow: hidden;
-	height:150px !important;
+	height:auto !important;
 	width:150px !important;
 }
