--- a/librairies/chouquette.css
+++ b/librairies/chouquette.css
@@ -54,6 +54,10 @@ p
 	font-size:1em;
 }
 
+#navbarSupportedContent{
+	max-height: 100;
+}
+
 /* Affichage fenetre de connexion/inscription */
 #fenetreConnexion
 {
