--- a/librairies/chouquette.css
+++ b/librairies/chouquette.css
@@ -137,12 +137,7 @@ form .error
 {
 	color: #ff0000;
 }
-.imageRogner
-{
-	overflow: hidden;
-	height:auto !important;
-	width:150px !important;
-}
+
 .search
 {
     display:flex;
@@ -153,7 +148,7 @@ form .error
 }
 
 /*gallerie*/
-#photos {
+.photos {
   /* Prevent vertical gaps */
   line-height: 0;
   -webkit-column-count:5;
@@ -164,7 +159,7 @@ form .error
   column-gap:0px;  
 }
 
-#photos img .gallerie{
+.photos img .gallerie{
   /* Just in case there are inline attributes */
   width: 100% !important;
   height: auto !important;
@@ -175,36 +170,41 @@ form .error
 	overflow: hidden  !important;
 	   height: 0;
     padding-bottom: 100%;}
-#photos img .tuile{
+.photos img .tuile{
   /* Just in case there are inline attributes */
   min-width: 100% !important;
   min-height:100%!important;
 }
 @media (max-width: 1200px) {
-  #photos {
+  .photos {
   -moz-column-count:    4;
   -webkit-column-count: 4;
   column-count:         4;
   }
 }
 @media (max-width: 1000px) {
-  #photos {
+  .photos {
   -moz-column-count:    3;
   -webkit-column-count: 3;
   column-count:         3;
   }
 }
 @media (max-width: 800px) {
-  #photos {
+  .photos {
   -moz-column-count:2;
   -webkit-column-count:2;
   column-count:2;
   }
 }
 @media (max-width: 400px) {
-  #photos {
+  .photos {
   -moz-column-count:1;
   -webkit-column-count:1;
   column-count:1;
   }
+}
+.liste img
+{
+  height: 200px;
+  width:auto;
 }
