--- a/librairies/chouquette.css
+++ b/librairies/chouquette.css
@@ -160,7 +160,7 @@ form .error
 }
 
 /*gallerie*/
-#photos {
+.photos {
   /* Prevent vertical gaps */
   line-height: 0;
   -webkit-column-count:5;
@@ -171,7 +171,7 @@ form .error
   column-gap:0px;  
 }
 
-#photos img .gallerie{
+.photos img .gallerie{
   /* Just in case there are inline attributes */
   width: 100% !important;
   height: auto !important;
@@ -182,34 +182,42 @@ form .error
 	overflow: hidden  !important;
 	   height: 0;
     padding-bottom: 100%;}
-#photos img .tuile{
+.photos img .tuile{
   /* Just in case there are inline attributes */
-  min-width: 100% !important;
-  min-height:100%!important;
+  width: 100% !important;
+
+  
+}
+div .liste{
+  /* Just in case there are inline attributes */
+  max-height: 200px  !important;
+  width: auto !important;
+
+ 
 }
 @media (max-width: 1200px) {
-  #photos {
-  -moz-column-count:    4;
+  .photos {
+  -moz-column-count: 4;
   -webkit-column-count: 4;
-  column-count:         4;
+  column-count:4;
   }
 }
 @media (max-width: 1000px) {
-  #photos {
-  -moz-column-count:    3;
+  .photos {
+  -moz-column-count: 3;
   -webkit-column-count: 3;
-  column-count:         3;
+  column-count:3;
   }
 }
 @media (max-width: 800px) {
-  #photos {
+  .photos {
   -moz-column-count:2;
   -webkit-column-count:2;
   column-count:2;
   }
 }
 @media (max-width: 400px) {
-  #photos {
+  .photos {
   -moz-column-count:1;
   -webkit-column-count:1;
   column-count:1;
