--- a/librairies/chouquette.css
+++ b/librairies/chouquette.css
@@ -33,11 +33,11 @@ header
 
 }
 
-body > footer {
+footer {
     background-color: rgb(45, 45, 45);
     color: white;
     text-align: center;
-	position: absolute;
+	position: relative;
 	bottom: 0;
 	left: 0;
 	right: 0;
