--- a/librairies/chouquette.css
+++ b/librairies/chouquette.css
@@ -22,6 +22,8 @@ body
 {
 	min-height: 100%;
 	position:relative;
+  -moz-box-sizing: border-box; 
+  box-sizing: border-box;
 }
 
 h1 {
@@ -37,7 +39,7 @@ footer {
     background-color: rgb(45, 45, 45);
     color: white;
     text-align: center;
-	position: relative;
+	position: absolute;
 	bottom: 0;
 	left: 0;
 	right: 0;
@@ -188,7 +190,7 @@ form .error
 
   
 }
-div .liste{
+img.liste{
   /* Just in case there are inline attributes */
   max-height: 200px  !important;
   width: auto !important;
